# VigineConfig

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/vigine/config/: configkey.h  configtree.h  configvalue.h  layeredstore.h  schemaregistry.h  tomlcodec.h  version.h
include/vigineconfig/: vigineconfig.h
src/: configkey.cpp  configtree.cpp  layeredstore.cpp  schemaregistry.cpp  tomlcodec.cpp  version.cpp
test/: configkey_test.cpp  configtree_test.cpp  configvalue_test.cpp  layeredstore_test.cpp  schemaregistry_test.cpp  smoke_test.cpp  tomlcodec_test.cpp
